name:                SIR-Dunai
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Jonathan Thaler

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          thaler.jonathan@gmail.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable SIR-Dunai
  main-is:             Main.hs
  build-depends:        base
                      , bearriver
                      , cassava
                      , dunai
                      , MonadRandom
                      , containers
                      , mtl
                      , gloss
                      , gloss-export
                      , array
                      , bytestring
  hs-source-dirs:       .
                      , src
  default-language:    Haskell2010
  ghc-options:         -Wall